terraform/main.tf
resource "aws_vpc" "hr_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "hr-platform-vpc"
  }
}

resource "aws_subnet" "hr_subnet" {
  vpc_id                  = aws_vpc.hr_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"

  tags = {
    Name = "hr-platform-subnet"
  }
}

resource "aws_internet_gateway" "hr_igw" {
  vpc_id = aws_vpc.hr_vpc.id

  tags = {
    Name = "hr-platform-igw"
  }
}

resource "aws_route_table" "hr_rt" {
  vpc_id = aws_vpc.hr_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.hr_igw.id
  }

  tags = {
    Name = "hr-platform-rt"
  }
}

resource "aws_route_table_association" "hr_rta" {
  subnet_id      = aws_subnet.hr_subnet.id
  route_table_id = aws_route_table.hr_rt.id
}
